--- a/public/css/sec-card.css
+++ b/public/css/sec-card.css
@@ -19,3 +19,21 @@
     justify-content: space-between;
     align-items: center;
 }
+
+@media screen and (max-width: 1200px){
+    .card{
+        width: 17rem !important;
+    }
+}
+
+@media screen and (max-width: 990px){
+    .card{
+        width: 20rem !important;
+    }
+}
+
+@media screen and (max-width: 760px){
+    .card{
+        width: 100% !important;
+    }
+}
