--- a/public/css/estudiantes.css
+++ b/public/css/estudiantes.css
@@ -16,8 +16,9 @@ label{
 }
 
 .header-container h1{
-    font-size: 30px;
-    color: #00723d !important;
+    font-size: 26px;
+    color: #075a72 !important;
+    text-transform: uppercase;
     font-weight: bold;
 }
 
@@ -27,8 +28,8 @@ label{
 
 .btn-main{
     color: #fff;
-    background-color: #00723d !important;
-    border-color: #00723d !important;
+    background-color: #075a72 !important;
+    border-color: #075a72 !important;
     margin-right: 30px;
     border-radius: 3rem;
     padding: 8px 23px;
@@ -36,35 +37,35 @@ label{
 }
 .btn-main:hover{
     color: #fff;
-    background-color: #00723d;
-    border-color: #00723d;
+    background-color: #075a72 ;
+    border-color: #075a72 ;
     margin-right: 30px;
 }
 .btn-main:focus{
     color: #fff !important;
-    background-color: #00723d !important;
-    border-color: #00723d !important;
+    background-color: #075a72  !important;
+    border-color: #075a72  !important;
     margin-right: 30px !important;
 }
 
 .btn-main:active{
     color: #fff !important;
-    background-color: #00723d !important;
-    border-color: #00723d !important;
+    background-color: #075a72  !important;
+    border-color: #075a72  !important;
     margin-right: 30px !important;
 }
 
 .table thead th{
     background-color: #EFEFEF !important;
     padding: 17px 8px;
-    color: #00723d !important;
+    color: #075a72  !important;
     font-size: 16px !important;
     font-weight: bold !important;
     vertical-align: bottom;
     border-bottom: 2px solid #dee2e6 !important;
 }
 .table tbody td .dropdown-menu a:hover{
-    background-color: #00723d !important;
+    background-color: #075a72  !important;
     color: #FFF !important;
     width: 9rem !important;
     margin: 0 10px !important;
@@ -77,21 +78,23 @@ label{
 
 .contentBody table tbody tr .btn-table{
     color: #fff;
-    background-color: #00723d;
-    border-color: #00723d;
+    background-color: #075a72 ;
+    border-color: #075a72 ;
 }
 
 .form-control {
     height: 32px !important;
 }
 .form-control:focus{
-    border: 1px solid #00723d !important;
+    border: 1px solid #075a72  !important;
     box-shadow: none;
 }
-
+.color-option{
+    color: #075a72;
+}
 .page-item.active .page-link {
     z-index: 3;
     color: #fff;
-    background-color: #00723d !important;
-    border-color: #00723d !important;
-}
+    background-color: #075a72  !important;
+    border-color: #075a72  !important;
+}  
