--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,10 +1,6 @@
 body{
-    z-index: 1;
-    background: linear-gradient(rgba(23, 77, 52, 0.8) 0px, rgba(23, 77, 52, 0.38)), url(../img/fondo-login.jpg) ;
-    background-repeat: no-repeat;
-    height: 100vh;
-    /* height: auto !important; */
-    background-size: cover;
+    background-color: #fff;
+
 }
 
 #box-login{
@@ -16,10 +12,19 @@ body{
     border-radius: 10px;
     padding: 30px;
     color: #666;
+    border: #dadce0 solid 1px;
 }
+#login-box-body .recover-pass{
+        display: block;
+    margin-top: 15px;
+    /* text-align: center; */
+    font-size: 16px;
+    font-weight: 600;
+    color: #075a72;
+}
+
 #login-box-body .logo-login{
     text-align: center;
-    padding: 0% 20% 0% 20%;
 }
 #login-box-body .logo-login img{
     display: block;
@@ -34,21 +39,33 @@ body{
 }
 
 .style-input{
-    padding: 8px;
-    border-radius: 6px;
-    border: 1px solid #9e9b9b;
+    background-color: transparent;
+    border: none;
+    border-bottom: 1px solid #9e9e9e;
+    border-radius: 0;
+    outline: none;
+    height: 3rem;
     width: 100%;
-    margin: 0;
-    font-size: 15px;
-    margin-top: 10px;
+    font-size: 16px;
+    margin: 0 0 8px 0;
+    padding: 0;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    -webkit-box-sizing: content-box;
+    box-sizing: content-box;
+    -webkit-transition: border .3s, -webkit-box-shadow .3s;
+    transition: border .3s, -webkit-box-shadow .3s;
+    transition: box-shadow .3s, border .3s;
+    transition: box-shadow .3s, border .3s, -webkit-box-shadow .3s;
 }
 .style-input:focus{
     /* outline:none !important; */
+    transition: 0.5s;
     outline-width: 0 !important;
     box-shadow: none;
     -moz-box-shadow: none;
     -webkit-box-shadow: none;
-    border: solid 1px #00723d !important;
+    border-bottom: solid 1px #075a72 !important;
     
 }
 
@@ -61,7 +78,7 @@ body{
     align-items: center;
     padding: 10px 20px;
     min-width: 160px;
-    background-color: #34A54E;
+    background-color: #075a72;
     border-radius: 5px;
     font-size: 17px;
     width: 100%;
