--- a/public/css/style-tem-course.css
+++ b/public/css/style-tem-course.css
@@ -1,3 +1,4 @@
+
 button{
     outline:none !important;
 }
@@ -9,16 +10,40 @@ header .justify-content-end{
     justify-content: flex-end !important;
     align-items: center !important;
 }
+.navbarHeader img{
+    height: 4em;
+}
 .navbar{
-    padding: 1rem 0 !important;
+    padding: 12px 0 !important;
     
 }
 .navbar a{
-    font-size: 16px;
+    font-size: 15px;
+    font-weight: 600;
     display: block;
     padding: 0.5rem 1rem;
     text-decoration: none;
-    color: rgb(17, 17, 17)
+    color: #575E66;
+}
+
+.navbar a.message svg{
+    height: 25px;
+    width: 25px;
+    fill: currentColor;
+}
+.navbar a.btn-logout{
+    background-color: #eb5656;
+    color: #FFF;
+    border-radius: 5px;
+    padding: 7px 15px;
+    
+}
+.navbar a.btn-logout:hover{
+    background-color: #d93939
+}
+.navbar a.btn-logout svg{
+    font-size: 19px;
+    fill: currentColor;
 }
 .navbar i{
     font-size: 22px;
@@ -28,6 +53,8 @@ nav .img-profile{
     height: 2rem;
     border-radius: 1rem;
 }
+
+
 .counter {
     position: relative;
     top: -23px;
@@ -37,17 +64,17 @@ nav .img-profile{
     margin-left: -20px;
     font-size: 8px;
     color: #fff;
-    background-color: #d61f1f;
+    background-color: #eb5656;
     border-radius: 10em;
     -webkit-box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
     box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
 }
 .counter.counter-lg {
-    top: -20px !important;
+    top: -12px !important;
 }
 .sec{
     position: relative;
-    right: -13px;
+    right: -8px;
     top:-22px;
 }
 .animated-icon1 {
