Vista detalle y calificar de tareas

--- a/public/css/course.css
+++ b/public/css/course.css
@@ -1,6 +1,6 @@
 :root{
     --color-success: #1cc88a;
-    --color-primary: #2756e4;
+    --color-primary: #3f36df;
 }
 body{
     background-color: #FCFCFC !important;
